Fix weasyl error on unknown type Fix form spacing css target

--- a/ui/src/styles/submission.css
+++ b/ui/src/styles/submission.css
@@ -13,7 +13,7 @@
   font-size: 16px;
 }
 
-.submission-form .form-section + .submission-form .form-section {
+.submission-form .form-section + .form-section {
   margin-bottom: 2rem;
   padding-bottom: 0px;
 }
